# cookiecutter_de

./: Dockerfile  README.md  cookiecutter.json  docker-compose.yml  pyproject.toml
{{cookiecutter.project_slug}}/: .dockerignore  .env.template  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
